# Data_retriever-Performance-Engine

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: dropdown.py  metrics.py
app/core/: config.py
app/db/: base.py  session.py
app/domain/: models.py
app/domain/services/: dataRetrieving.py
app/infrastructure/: victoria_client.py
app/schemas/: request.py
app/tests/: metricsRetrievingTest.py
